--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
+    "firebase": "^12.2.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
