--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-VITE_GOOGLE_MOCK_TOKEN = 
+VITE_FIREBASE_API_KEY=AIzaSyBGVofEoMVQY1uJVhrQ-y4_kNJhW-q3yew
+VITE_FIREBASE_AUTH_DOMAIN=oms-platform-e2d35.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=oms-platform-e2d35
+VITE_FIREBASE_STORAGE_BUCKET=oms-platform-e2d35.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=911564384878
+VITE_FIREBASE_APP_ID=1:911564384878:web:999c808b136910f413147f
+VITE_FIREBASE_MEASUREMENT_ID=G-745Y1G9BTX
